[tool.poetry]
name = "ja-law-parser"
version = "0.1.0"
description = "A Japanese law parser"
license = "MIT"
authors = ["Takuya Asano <takuya.a@gmail.com>"]
readme = "README.md"
packages = [{ include = "ja_law_parser" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-xml = { extras = ["lxml"], version = "^2.3.0" }
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
sphinx = "^7.2.6"
ruff = "^0.1.4"
pre-commit = "^3.5.0"
mypy = "^1.6.1"
lxml-stubs = "^0.4.0"
tqdm = "^4.66.1"
types-tqdm = "^4.66.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
select = ["C9", "E", "F", "W", "I"]
